# HYBIRD

./: .gitignore  CMakeLists.txt  DEM.cpp  DEM.h  HYBIRD.cbp  IO.cpp  IO.h  LB.cpp  LB.h  LICENSE  Makefile  README.md  Xpasqua_groupUserci1apacodeshybirdsubmarine  config.cfg  elmt.cpp  elmt.h  getpot.h  hybird.cpp  lattice.h  myvector.h  newClass.cpp  newClass.h  node.h  utils.h
.github/: README.md  problem-matchers.json
.github/scripts/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
.github/workflows/: Ubuntu.yml  Windows.yml
benchmark/testlub/: shear_cell.cfg
cmake/dependencies/: exprtk.cmake  yaml-cpp.cmake
hybird.dir/Debug/: hybird.exe.recipe
hybird.dir/Debug/hybird.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.2.tlog  link.secondary.1.tlog  link.write.1.tlog
hybird.dir/Release/: hybird.exe.recipe
hybird.dir/Release/hybird.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
manual/: jobfile_example.sh
manual/tutorials/bingham_flow/: bingham_flow.cfg  scaling_Bingham.xlsx
manual/tutorials/granular_column/particleGenerator/: particleGenerator.m
manual/tutorials/granular_flow/: granular_flow.cfg
manual/tutorials/laminar_flow/: laminar_flow.cfg  laminar_flow.cfg.bak
manual/tutorials/tsunami_wave/: tsunami_wave.cfg
matlab/: writeJobFile.m
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
problems/: example.yml
results/cylMoving/20240712_151738/: particleDatacylinder0000000000.vtu  particleDatacylinder0000000600.vtu  particleDatacylinder0000001000.vtu
results/cylMoving/20240712_151738/particleData/: part0000000600.vtu  part0000001000.vtu
results/cylMoving/20240712_151850/particleData/: part0000000400.vtu
results/cylMoving/20240712_152041/particleData/: cylinder0000000201.vtu  cylinder0000001200.vtu  cylinder0000001400.vtu  cylinder0000001601.vtu  cylinder0000001801.vtu  cylinder0000002001.vtu  cylinder0000002201.vtu  cylinder0000002401.vtu  cylinder0000002601.vtu  cylinder0000002801.vtu  cylinder0000003001.vtu  cylinder0000003201.vtu  cylinder0000003401.vtu  cylinder0000003601.vtu  cylinder0000003801.vtu  cylinder0000004001.vtu  cylinder0000004201.vtu  part0000000201.vtu  part0000003201.vtu  part0000004001.vtu
results/cylMoving/20240712_152453/particleData/: cylinder0000000400.vtu  cylinder0000000800.vtu
results/cylMoving/20240712_153451/particleData/: cylinder0000000000.vtu  cylinder0000000201.vtu  cylinder0000000400.vtu  cylinder0000000600.vtu  cylinder0000000800.vtu  cylinder0000001000.vtu  cylinder0000001200.vtu  cylinder0000001400.vtu  cylinder0000001601.vtu  cylinder0000001801.vtu  cylinder0000002001.vtu  cylinder0000002201.vtu  cylinder0000002401.vtu  cylinder0000002601.vtu  cylinder0000002801.vtu  cylinder0000003001.vtu  cylinder0000003201.vtu  cylinder0000003401.vtu  cylinder0000003601.vtu  cylinder0000003801.vtu  cylinder0000004001.vtu  cylinder0000004201.vtu  cylinder0000004401.vtu  cylinder0000004601.vtu  cylinder0000004801.vtu  cylinder0000005001.vtu  cylinder0000005201.vtu  cylinder0000005401.vtu  part0000003801.vtu  part0000004201.vtu
results/cylMoving/20240712_153701/particleData/: cylinder0000000000.vtu  cylinder0000000201.vtu  cylinder0000000400.vtu  cylinder0000000600.vtu  cylinder0000000800.vtu  cylinder0000001000.vtu  cylinder0000001200.vtu  cylinder0000001400.vtu  cylinder0000001601.vtu  cylinder0000001801.vtu  cylinder0000002001.vtu  cylinder0000002201.vtu  part0000001400.vtu
results/cylMoving/20240712_154001/particleData/: cylinder0000000000.vtu  cylinder0000000400.vtu  cylinder0000000600.vtu  cylinder0000000800.vtu  cylinder0000001000.vtu  cylinder0000001200.vtu  cylinder0000001400.vtu  cylinder0000001601.vtu  cylinder0000001801.vtu  cylinder0000002001.vtu  cylinder0000002201.vtu  cylinder0000002401.vtu  cylinder0000002601.vtu  cylinder0000002801.vtu  cylinder0000003001.vtu  cylinder0000003201.vtu  cylinder0000003401.vtu  cylinder0000003601.vtu  cylinder0000003801.vtu  part0000002201.vtu
results/cylMoving/20240712_154406/particleData/: cylinder0000000201.vtu
results/cylMoving/20240712_154658/particleData/: cylinder0000000000.vtu  cylinder0000000201.vtu  (+10 more)
results/cylMoving/20240712_160734/: config_testCylinderMoving.cfg
results/granular_intruder/20240710_152325/: config_testIntruderMoving.cfg
results/granular_intruder/20240710_160203/: config_testIntruderMoving.cfg
results/granular_intruder/20240710_161755/: config_testIntruderMoving.cfg
results/granular_intruder/column/: config_intruder_createDense.cfg
results/objIntruder/20240711_145513/: config_testObjMoving.cfg
results/objIntruder/20240711_153436/: config_testObjMoving.cfg
src/: DEM.cpp  DEM.h  IO.cpp  IO.h  LB.cpp  LB.h  MeasureUnits.h  Problem.cpp  Problem.h  elmt.cpp  elmt.h  getpot.h  hybird.cpp  hybird.cu  lattice.h  macros.h  myvector.cpp  myvector.h  myvector.inl  newClass.cpp  newClass.h  node.cpp  node.h  utils.cpp  utils.h
src/gpu/: Cylinder2.cu  Cylinder2.h  DEM2.cu  DEM2.h  DEMParams.cu  DEMParams.h  Element2.cu  Element2.h  IO2.cu  IO2.h  LB2.cu  LB2.h  LBParams.cu  LBParams.h  Node2.cu  Node2.h  Object2.cu  Object2.h  Particle2.cu  Particle2.h  README.md  ValidationIO.h  Wall2.cu  Wall2.h  cub_temp_mem.h  cuda_helper.h
tutorials/bingham_flow/: bingham_flow.cfg
tutorials/granular_column/: granular_colum.cfg
tutorials/granular_column/particleGenerator/: particleGenerator.m
tutorials/granular_column/postprocessing/: Book1.xlsx
tutorials/granular_flow/: granular_flow.cfg  scaling_granular.xlsx
tutorials/laminar_flow/: laminar_flow.cfg  laminar_flow.cfg.bak
tutorials/tsunami_wave/: tsunami_wave.cfg  tsunami_wave_clumnSaturated.cfg
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
(+592 files in other folders)
